example/lib/src/generated/errors/errors_localization_mr.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Marathi (`mr`).
class ErrorsLocalizationMr extends ErrorsLocalization {
  ErrorsLocalizationMr([String locale = 'mr']) : super(locale);

  @override
  String get error => 'एक त्रुटी झाली';

  @override
  String get unexpectedError => 'अनपेक्षित त्रुटी घडली';

  @override
  String get bugReportSentText => 'बग रिपोर्ट यशस्वीपणे पाठविला गेला.';
}
